WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197156
[GTK] MiniBrowser: also set the passed bg-color when receiving arguments
https://bugs.webkit.org/show_bug.cgi?id=197156
Summary
[GTK] MiniBrowser: also set the passed bg-color when receiving arguments
Carlos Garcia Campos
Reported
2019-04-22 03:57:42 PDT
The background color is only set when MiniBrowser is launched without arguments. This regressed when tabs support was added.
Attachments
Patch
(5.66 KB, patch)
2019-04-22 04:07 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2019-04-22 04:07:07 PDT
Created
attachment 367935
[details]
Patch
EWS Watchlist
Comment 2
2019-04-22 04:08:55 PDT
Attachment 367935
[details]
did not pass style-queue: ERROR: Tools/MiniBrowser/gtk/BrowserTab.h:57: browser_tab_set_background_color is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Tools/MiniBrowser/gtk/BrowserTab.c:607: browser_tab_set_background_color is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Michael Catanzaro
Comment 3
2019-04-22 08:58:39 PDT
Please add these files to the style checker whitelist.
Carlos Garcia Campos
Comment 4
2019-04-24 00:54:04 PDT
Committed
r244583
: <
https://trac.webkit.org/changeset/244583
>
Radar WebKit Bug Importer
Comment 5
2019-04-24 00:55:18 PDT
<
rdar://problem/50159645
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug