[GTK] MiniBrowser: also set the passed bg-color when receiving arguments https://bugs.webkit.org/show_bug.cgi?id=197156

Reviewed by Michael Catanzaro.

The background color is only set when MiniBrowser is launched without arguments. This regressed when tabs
support was added.

* MiniBrowser/gtk/BrowserTab.c:
(browser_tab_set_background_color): Set the passed in color as web view background color.
* MiniBrowser/gtk/BrowserTab.h:
* MiniBrowser/gtk/BrowserWindow.c:
(browser_window_init): Initialize backgroundColor.
(browser_window_append_view): Call browser_tab_set_background_color().
(browser_window_set_background_color): Save the passed in color. This function should now be called before tabs
are added.
* MiniBrowser/gtk/main.c:
(main): Call browser_window_set_background_color() before creating the tabs.

Canonical link: https://commits.webkit.org/211443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244583 268f45cc-cd09-0410-ab3c-d52691b4dbfc